@startuml
'https://plantuml.com/class-diagram

class voltage220v{
    output220v():void
}

interface voltage5v{
    output5v():void
}

class voltageAdapter{}
voltage220v <|-- voltageAdapter
voltageAdapter ..|> voltage5v
class phone{
    charging():void
}


phone ..> voltage5v
class client{}

client ..>phone
client ..>voltageAdapter
@enduml